# execute-db

./: .gitignore  README.md  install.sh  pyproject.toml
db_core/: __init__.py  app.py  cli.py  console.py
db_core/commands/: config.py  exec.py  password.py  schema.py  token.py
db_core/core/: query.py  schema.py  split.py  store.py  system.py  tokens.py
docs/plans/: 2026-07-07-config-subcommand.md  2026-07-15-schema-command-design.md  2026-07-15-schema-command.md  2026-07-20-multi-statement-design.md  2026-07-20-multi-statement-sql.md
execute_db/: cli.py  config_cmd.py  crypto.py  envs.py  kernel_keyring.py  passwords.py  paths.py  query.py  system.py  tokens.py  util.py
execute_db/commands/: config.py  exec.py  password.py  token.py
execute_db/core/: crypto.py  query.py  store.py  tokens.py
explore_db/: cli.py
specs/: ARCHITECTURE.md  CREDENTIAL_STORE.md  EPHEMERAL_TOKENS.md  ERROR_DISCLOSURE.md  INTENT.md  PRIVILEGE_SEPARATION.md  SCHEMA_BROWSE.md  SCHEMA_INTROSPECTION.md  SQL_EXECUTION.md
tests/: conftest.py  test_cli.py  test_config.py  test_discovery.py  test_error_disclosure.py  test_explore.py  test_multi.py  test_multi_output.py  test_output.py  test_schema.py  test_schema_integration.py  test_split.py
