[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "execute-db"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[project.scripts]
execute-db = "execute_db.cli:main"
