[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "execute-db"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[tool.setuptools.dynamic]
version = {attr = "execute_db.__version__"}

[project.scripts]
execute-db = "execute_db.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
